feat: adding Google Maps keys

--- a/frontend/eskap_app/android/app/src/main/AndroidManifest.xml
+++ b/frontend/eskap_app/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="eskap_app"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyAArYTlLnuNATODZNqBK0oQL2Dg4gvxZU0"/>
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
