--- a/frontend/eskap_app/pubspec.yaml
+++ b/frontend/eskap_app/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   google_maps_flutter: ^0.5.27+3
   location: ^3.0.0
+  http: ^0.12.1
+  uuid: ^2.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
