--- a/backend/escape-game-api/pom.xml
+++ b/backend/escape-game-api/pom.xml
@@ -32,6 +32,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- jackson-databind for JSON manipulation -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.10.0</version>
+        </dependency>
+
     </dependencies>
 
     <build> 
