--- a/backend/escape-game-api/pom.xml
+++ b/backend/escape-game-api/pom.xml
@@ -10,6 +10,12 @@
         <maven.compiler.target>11</maven.compiler.target> 
     </properties>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.0.RELEASE</version>
+    </parent>
+
     <dependencies>
 
         <!-- testing --> 
@@ -32,18 +38,9 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- jackson-databind for JSON manipulation -->
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.10.0</version>
-        </dependency>
-
-        <!-- spring -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>5.2.0.RELEASE</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
     </dependencies>
