--- a/backend/escape-game-api/pom.xml
+++ b/backend/escape-game-api/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build> 
