--- a/frontend/eskap_app/pubspec.yaml
+++ b/frontend/eskap_app/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   #Rating
   flutter_rating_bar: ^3.2.0+1
 
+  #URL
+  url_launcher: ^5.7.10
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
