--- a/backend/escape-game-api/pom.xml
+++ b/backend/escape-game-api/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>h2</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
     </dependencies>
 
     <build> 
