--- a/frontend/eskap_app/pubspec.yaml
+++ b/frontend/eskap_app/pubspec.yaml
@@ -51,6 +51,15 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  # Icon
+  flutter_launcher_icons: ^0.8.1
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/eskap-icon.png"
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -64,6 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/icon/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
