--- a/frontend/eskap_app/android/app/src/main/AndroidManifest.xml
+++ b/frontend/eskap_app/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="eskap_app"
+        android:label="Eskap"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
                android:value="AIzaSyAArYTlLnuNATODZNqBK0oQL2Dg4gvxZU0"/>
